--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agrinho 2025 - Paraná</title>
-    <!-- Aqui usamos CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- HTML: estrutura da página -->
     <header>
         <h1>Agrinho 2025 - Paraná</h1>
+        <p id="saudacao"></p> <!-- Aqui aparece o nome da pessoa via JS -->
         <nav>
             <ul>
+                <li><a href="#sobre">O que é o Agrinho</a></li>
                 <li><a href="#quem-somos">Quem Somos</a></li>
                 <li><a href="#equipe">Equipe</a></li>
                 <li><a href="#contato">Contato</a></li>
@@ -21,12 +21,20 @@
     </header>
 
     <main>
+        <section id="sobre">
+            <h2>O que é o Programa Agrinho?</h2>
+            <p>
+                O Agrinho é um programa educacional do SENAR-PR, desenvolvido em parceria com escolas do Paraná.
+                Ele incentiva estudantes e professores a refletirem sobre temas como cidadania, meio ambiente,
+                sustentabilidade, saúde e inclusão social. Em 2025, o programa continua promovendo a conexão entre
+                o campo e a cidade por meio da educação.
+            </p>
+        </section>
+
         <section id="imagem-principal">
             <h2>Imagem do Projeto</h2>
-            <!-- HTML: campo para imagem -->
             <img src="agrinho2025.jpg" alt="Imagem do Projeto Agrinho 2025" id="imagem" width="300">
             <br>
-            <!-- JavaScript: muda imagem dinamicamente -->
             <button onclick="mudarImagem()">Mudar Imagem</button>
         </section>
 
@@ -55,7 +63,6 @@
         <p>&copy; 2025 Projeto Agrinho - Todos os direitos reservados.</p>
     </footer>
 
-    <!-- Aqui usamos JavaScript -->
     <script src="script.js"></script>
 </body>
 </html>
