--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <section id="equipe">
             <h2>Equipe</h2>
             <ul>
-                <li>Maria Silva</li>
-                <li>João Pereira</li>
-                <li>Ana Souza</li>
+                <li>Maria Clara</li>
+                <li>Danilo</li>
+                <li>Matheus</li>
             </ul>
         </section>
 
