--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
         <section id="imagem-principal">
             <h2>Imagem do Projeto</h2>
-            <img src="agrinho2025.jpg" alt="Imagem do Projeto Agrinho 2025" id="imagem" width="300">
+          <img src="imagem/agrinho2025.jpg" alt="Imagem do Projeto Agrinho 2025" id="imagem" width="300">
+
             <br>
             <button onclick="mudarImagem()">Mudar Imagem</button>
         </section>
