--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Agrinho 2025 - Paraná</h1>
-        <p id="saudacao"></p> <!-- Aqui aparece o nome da pessoa via JS -->
+        <p id="saudacao"></p>
         <nav>
             <ul>
                 <li><a href="#sobre">O que é o Agrinho</a></li>
@@ -33,10 +33,7 @@
 
         <section id="imagem-principal">
             <h2>Imagem do Projeto</h2>
-          <img src="imagem/agrinho2025.jpg" alt="Imagem do Projeto Agrinho 2025" id="imagem" width="300">
-
-            <br>
-            <button onclick="mudarImagem()">Mudar Imagem</button>
+            <img src="imagem/agrinho2025.jpg" alt="Imagem do Projeto Agrinho 2025" id="imagem" width="300">
         </section>
 
         <section id="quem-somos">
@@ -47,9 +44,9 @@
         <section id="equipe">
             <h2>Equipe</h2>
             <ul>
-                <li>Maria Clara</li>
-                <li>Danilo</li>
-                <li>Matheus</li>
+                <li>Maria Silva</li>
+                <li>João Pereira</li>
+                <li>Ana Souza</li>
             </ul>
         </section>
 
