alteração de página

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agrinho 2025 - Paraná</title>
+    <title>Agrinho 2025 - SEED/SENAR-PR</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -32,27 +32,27 @@
         </section>
 
         <section id="imagem-principal">
-            <h2>Imagem do Projeto</h2>
+            <h2>Programa Agrinho - Colégio Estadual João Maffei Rosa</h2>
             <img src="imagem/agrinho2025.jpg" alt="Imagem do Projeto Agrinho 2025" id="imagem" width="300">
         </section>
 
         <section id="quem-somos">
-            <h2>Quem Somos</h2>
+            <h3>Quem Somos</h3>
             <p>Somos estudantes comprometidos com o desenvolvimento sustentável e com o futuro do campo e da cidade.</p>
         </section>
 
         <section id="equipe">
-            <h2>Equipe</h2>
+            <h5>Equipe 3ºA</h5>
             <ul>
-                <li>Maria Silva</li>
-                <li>João Pereira</li>
-                <li>Ana Souza</li>
+                <li>Ariel Hora</li>
+                <li>Mayby Freitas</li>
+                <li>Danilo madeira</li>
             </ul>
         </section>
 
         <section id="contato">
-            <h2>Contato</h2>
-            <p>Email: <a href="mailto:contato@agrinho2025.com">contato@agrinho2025.com</a></p>
+            <h4>Contato</h4>
+            <p>Email: <a href="mailto:contato@agrinho2025.com">contato@agrinho.com</a></p>
             <p>Instagram: <a href="https://instagram.com/agrinho2025" target="_blank">@agrinho2025</a></p>
         </section>
     </main>
