--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agrinho 2025 - SEED/SENAR-PR</title>
+    <title>Agrinho 2025 - Paraná</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Agrinho 2025 - Paraná</h1>
+        <h1>Agrinho 2025 - SEED/SENAR-PR</h1>
         <p id="saudacao"></p>
         <nav>
             <ul>
@@ -42,7 +42,7 @@
         </section>
 
         <section id="equipe">
-            <h5>Equipe 3ºA</h5>
+            <h5>Equipe 3ºA</h>
             <ul>
                 <li>Ariel Hora</li>
                 <li>Mayby Freitas</li>
